feat(modal): add modal + layout fix

--- a/angular.json
+++ b/angular.json
@@ -122,5 +122,8 @@
       }
     }
   },
-  "defaultProject": "beerhavior-front"
+  "defaultProject": "beerhavior-front",
+  "cli": {
+    "analytics": false
+  }
 }
