--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.fontSize": 12,
     "editor.fontLigatures": true,
     "json.schemas": [
-    
+
     ],
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#fa1b49",
@@ -22,7 +22,8 @@
         "titleBar.activeBackground": "#dd0531",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#dd053199",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#dd0531"
 }
